src/sass/_layout.scss
// Mixin for Keyframes
@mixin keyframes($animation-name) {
    @-webkit-keyframes #{$animation-name} {
        @content;
    }
    @-moz-keyframes #{$animation-name} {
        @content;
    }
    @keyframes #{$animation-name} {
        @content;
    }
}

// Mixin for Color Animation
@mixin color-animation($color-type) {
    -webkit-animation-name: $color-type; /* Chrome, Safari, Opera */
    -webkit-animation-duration: 60s; /* Chrome, Safari, Opera */
    -webkit-animation-iteration-count: infinite; /* Chrome, Safari, Opera */
    animation-name: $color-type;
    animation-duration: 60s;
    animation-iteration-count: infinite;
}

// Animations
$list: background-color, border-color, color;
@each $part in $list {
    @include keyframes($part) {
        0%   {#{$part}: $markup-color}
        20%  {#{$part}: $goyippi-green;}
        40%  {#{$part}: $goyippi-tan;}
        60%  {#{$part}: $goyippi-red;}
        80%  {#{$part}: $goyippi-violet;}
        100% {#{$part}: $markup-color}
    }
}

// General
body {
    font-family: $font-stack;
    font-size: 100%;
    line-height: 1.375;
    color: $primary-color;
    margin: 0;
    padding: 0;
    letter-spacing: 0.01em;
    background-color: $inverted-color;
    box-sizing: border-box;
    font-kerning: normal;
    -webkit-text-size-adjust: none;
    -webkit-font-smoothing: antialiased;
}

.inner {
    @extend %clearfix;
    max-width: $primary-width;
    margin: 0 auto;
    padding: $default-padding;
}

.col-2 {
    width: 48.5%;
    float: left;

    @media screen and (max-width: $breakpoint-small) {
        width: 100%;
        float: none;
    }
}

.col-right {
    float: right;

    @media screen and (max-width: $breakpoint-small) {
        float: none;
    }
}

// Links & Buttons
a {
    color: $markup-color;
    @include color-animation(color);
    text-decoration: none;
    outline: none;
    transition: color 0.25s;

    &:hover {
        color: $secondary-color !important;
        text-decoration: none;
        outline: none;
        transition: color 0.25s;
    }
}

a.link-button, a.more-link, .button-box a {
	font-family: $font-stack;
    font-size: 1em;
    line-height: 1.125;
    letter-spacing: 0.025em;
	color: $inverted-color;
	padding: $default-padding/2 $default-padding/2 6px;
	background-color: $markup-color;
	margin: $default-padding/2 0 $default-padding/2;
    border: 0;
    border: 1px solid $markup-color;
    text-decoration: none;
    display: inline-block;
    transition: background-color 0.25s;

    &:hover {
        color: $inverted-color;
        background-color: $primary-color;
        text-decoration: none;
    }
}

// Textformats
h1, .h1 {
    font-family: $font-stack;
    font-size: 2.25em;
    line-height: 1.11;
    letter-spacing: 0;
    color: $markup-color;
    @include color-animation(color);
    text-align: center;
    margin: $default-padding/2 0 20px;
}

h2, .h2 {
    font-family: $font-stack;
    font-size: 1.625em;
    line-height: 1.231;
    letter-spacing: 0;
    color: $markup-color;
    @include color-animation(color);
    margin: $default-padding/2 0 20px;
}

h3, .h3 {
    font-family: $font-stack;
    font-size: 1.313em;
    line-height: 1.238;
    letter-spacing: 0;
    color: $markup-color;
    @include color-animation(color);
    margin: $default-padding/2 0 $default-padding/2;
}

h4, .h4 {
    font-family: $font-stack;
    font-size: 1em;
    line-height: 1.125;
    letter-spacing: 0;
    color: $markup-color;
    @include color-animation(color);
    margin: $default-padding/2 0 $default-padding/2;
}

p, dd {
    margin: 0 0 $default-padding;
}

strong, b {
    font-weight: bold;
}

em, italic {
    color: $secondary-color;
}

blockquote, .quote {
    @extend p;
    font-size: 1.625em;
    line-height: 1.231;
}

ul, ol {
    margin: 0 0 8px;

    li {
        list-style: outside none disc;
        margin: 2px 0 2px 0.9em;
    }
}

ol {
    li {
        list-style: outside none decimal;
    }
}

img {
    max-width: 100%;
    height: auto;
}

#github-gists {
    a {
        overflow-wrap: break-word;
        word-wrap: break-word;
    }
}

// Forms
input[type=text], input[type=email], input[type=password], input[type=url], textarea {
    font-family: $font-stack;
    font-size: 1em;
    line-height: 1.375;
    color: $primary-color;
    border: 1px solid $markup-color;
    @include color-animation(border-color);
	background-color: $inverted-color;
	width: 99%;
	padding: 3px 6px 1px;
	margin-bottom: 8px;
}

textarea {
    font-family: $font-stack;
    font-size: 0.813em;
    line-height: 1.385;
	height: 120px;
	max-width: 99%;
    border-top: 0;
}

input[type=radio], input[type=checkbox] {
    vertical-align: top;
    margin-right: 6px;
}

select {
    font-family: $font-stack;
    font-size: 0.813em;
    line-height: 1.385;
	width: 100%;

    option {
        padding: 3px 6px 1px;
    }
}

button, input[type=submit] {
    @extend a.link-button;

	padding-top: 8px;
    cursor: pointer;
}

label {
    font-family: $font-stack;
    font-size: 0.813em;
    line-height: 1.385;
    color: $primary-color;
}

// Divider
.clear {
    clear: both;
    height: 0;
    overflow: hidden;
}

.divider {
    @extend .clear;
    height: 10px;
}

.line {
    @extend .clear;
    height: 1px;
    border-top: 1px solid $markup-color;
    @include color-animation(border-color);
    margin: $default-padding/2 0;
}

// Centered Blocks
.center {
    text-align: center;

    button, input[type=submit] {
        margin-left: 4px;
        margin-right: 4px;
    }
}

// Header
.header {
    color: $inverted-color;
    background-color: $markup-color;
    @include color-animation(background-color);

    .inner {
        position: relative;
        overflow: hidden;
        padding: 35px $default-padding 30px;

        &:after {
            content: '{ }';
            font-size: 200px;
            display: block;
            position: absolute;
            right: 20px;
            bottom: -80px;
            opacity: 0.4;

            @media screen and (max-width: $breakpoint-medium) {
                content: '';
                display: none;
            }
        }

        @media screen and (max-width: $breakpoint-small) {
            padding: 16px $default-padding 11px;
        }
    }

    h1, .h1 {
        color: $inverted-color !important;
        text-align: left;
        font-weight: bold;
        margin: 0;
    }

    img {
        max-height: 73px;
        width: auto;

        @media screen and (max-width: $breakpoint-small) {
            max-height: 32px;
        }
    }
}

// Footer
.footer {
    @extend %clearfix;
    max-width: $primary-width;
    margin: 0 auto;
    padding: 0 $default-padding;

    .inner {
        padding: $default-padding 0;
        margin: 0;
        border-top: 1px solid $markup-color;
        @include color-animation(border-color);
    }
}

